add different color versions

--- a/tulip_knot copy/index.html
+++ b/tulip_knot copy/index.html
@@ -10,6 +10,6 @@
   <body>
     <script src="sketch.js"></script>
     <script src="petal.js"></script>
-    <script src="tulip.js"></script>
+    <!-- <script src="tulip.js"></script> -->
   </body>
 </html>
